# gui-lib

./: CMakeLists.txt  build.zig  build.zig.zon  button.cpp  button.hpp  drag_box.cpp  drag_box.hpp  drag_field.cpp  drag_field.hpp  gui.h  gui.hpp  gui_element.cpp  gui_element.hpp  paragraph.cpp  paragraph.hpp  vertex_array.cpp  vertex_array.hpp  window.cpp  window.hpp
c/: button.cpp  button.h  drag_box.cpp  drag_box.h  drag_field.cpp  drag_field.h  gui_element.cpp  gui_element.h  paragraph.cpp  paragraph.h  vertex_array.cpp  vertex_array.h  window.cpp  window.h
include/: button.hpp  drag_box.hpp  drag_field.hpp  gui.h  gui_element.hpp  selection.hpp  slider.hpp  vertex_array.hpp  window.hpp
include/c/: button.h  drag_box.h  drag_field.h  selection.h  slider.h  window.h
src/: button.cpp  drag_box.cpp  drag_field.cpp  gui_element.cpp  paragraph.cpp  selection.cpp  slider.cpp  window.cpp
src/c/: button.cpp  drag_box.cpp  drag_field.cpp  gui_element.cpp  paragraph.cpp  selection.cpp  slider.cpp  vertex_array.cpp  window.cpp
